--- a/sidebar.html
+++ b/sidebar.html
@@ -16,3 +16,4 @@
 <span class="sideBarTitle">Other Function</span>
 <a href="#setCookie" class="sideBarItem">Set Cookie</a>
 <a href="#submitForm" class="sideBarItem">Payment Gateway</a>
+<a href="#stayLogin" class="sideBarItem">Stay Login Function</a>
