--- a/sidebar.html
+++ b/sidebar.html
@@ -13,6 +13,7 @@
 <a href="#arrayFunction" class="sideBarItem">Array / Object Function</a>
 <a href="#numericInp" class="sideBarItem">Apply Numeric Input</a>
 <a href="#conditionalStatement" class="sideBarItem">Conditional Statement</a>
+<a href="#dateFunc" class="sideBarItem">Date Time Function</a>
 <span class="sideBarTitle">Other Function</span>
 <a href="#setCookie" class="sideBarItem">Set Cookie</a>
 <a href="#submitForm" class="sideBarItem">Payment Gateway</a>
