--- a/setupWin.html
+++ b/setupWin.html
@@ -21,7 +21,7 @@
                 <a href="index.html" class="backBtn"><i class="fa fa-arrow-left"></i> Back</a>
             </div>
             <div class="sectionDisplay">
-                <h4>1.0 Software needed</h4>
+                <h4>Software needed</h4>
                 <ol>
                     <li>
                         <p>Subversion for Windows</p>
