--- a/sidebar.html
+++ b/sidebar.html
@@ -1,5 +1,6 @@
 <a href="debug.html" class="sideBarItem">Debug Flow</a>
 <a href="setupWin.html" class="sideBarItem">Setup Instructions</a>
+<a href="javascript:;" class="sideBarItem" data-toggle="modal" data-target="#sshKeyModal">Get SSH Key</a>
 <span class="sideBarTitle">Basic Function</span>
 <a href="#callBackend" class="sideBarItem">Call Backend</a>
 <a href="#tableFunction" class="sideBarItem">Table Function</a>
