--- a/sidebar.html
+++ b/sidebar.html
@@ -1,4 +1,5 @@
 <a href="debug.html" class="sideBarItem">Debug Flow</a>
+<a href="vue.html" class="sideBarItem">Vue</a>
 <a href="setupWin.html" class="sideBarItem">Setup Instructions</a>
 <a href="javascript:;" class="sideBarItem" data-toggle="modal" data-target="#sshKeyModal">Get SSH Key</a>
 <span class="sideBarTitle">Basic Function</span>
