--- a/vue.html
+++ b/vue.html
@@ -19,12 +19,18 @@
         <div id="vueSideBar" class="sideBar"></div>
         <div class="bodyContent">
             <div class="sectionDisplay alert alert-success">
-                <p class="mb-3"><b>2022/02/08 Updated: </b></p>
+                <p class="mb-2"><b>2022/02/08 Updated: </b></p>
                 <ol class="updateLog">
                     <li>Setup</li>
                     <li>Sample Template</li>
                     <li>Call API function</li>
                     <li>Build Table function</li>
+                </ol>
+
+                <p class="mt-4 mb-2"><b>Official Documentation URL</b></p>
+                <ol class="updateLog">
+                    <li><a href="https://v2.vuejs.org/v2/guide/index.html" target="_blank">Vue</a></li>
+                    <li><a href="https://vuetifyjs.com/en/" target="_blank">Vuetify</a></li>
                 </ol>
             </div>
             <div id="setup" class="sectionDisplay">
@@ -57,7 +63,6 @@
             <div id="pageTemplate" class="sectionDisplay">
                 <h4>Page Template</h4>
                 <p>Sample page template for vue</p>
-                <p>For vue official documentation <a href="https://v2.vuejs.org/v2/guide/index.html" target="_blank">Click me</a></p>
                 <div class="codeBlock">
                     <div data-desc="Component template should contain exactly one root element. Display data using {{VARIABLE_NAME}}. You can use the v-model directive to create two-way data bindings on form input, textarea, and select elements.">
                         <code>&lt;template&gt;</code>
